--- a/Tests/Aix.StateMachineTests/Aix.StateMachinesTests.csproj
+++ b/Tests/Aix.StateMachineTests/Aix.StateMachinesTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Aix.StateMachine\Aix.StateMachines.csproj" />
+    <ProjectReference Include="..\..\src\Aix.StateMachines\Aix.StateMachines.csproj" />
   </ItemGroup>
 
 </Project>
